# python-smc2-filtering-control

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
Ajays_project_upgrade_plans/: Ajays notes 1 - MOVING TO LEAN CENTRIC CODE BASE.md  Ajays notes 2 - MOVING TO JULIA CENTRIC CODE BASE.md  Ajays notes 3 - Bridging LEAN4 and Julia Code.md  Ajays notes 4 - Debugging and verifying the Julia SMC2FC Code Base.md  Claude Code - JULIA PORT PLAN.md  Gemini - review of port plan.md  Hybrid_CPU_GPU_Strategy.md
LaTex_docs/: .gitignore  README.md  julia_port_charter.tex  main.tex  preamble.tex
LaTex_docs_outdated/: swat_model.tex
claude_plans/: Advice_on_smc2fc_Port_Cost_Function_Architecture_2026-05-05_1055.md  Ajays Notes 1- Importing the FSA version 5 model.md  Ajays Notes 3 - Guiding the import and verification agent.md  Ajays Notes 4 - Guiding on the Cost function.md  Ajays Notes 5 - Guiding the Verification Agent.md  Ajays Notes 6 - Moving to LEAN4 centric.md  B3_segmented_PF_python_parity_handoff_2026-05-07_0724.md  FSA-v5_Stage_2_Stage_3_verification_soft_fast_controller_variant_2026-05-05_2046.md  FSA-v5_import_three-stage_verification_2026-05-05_1019.md  Geminis_observation_on_why_fp64_is_the_bottleneck_on_RTX_5090.md  Geminis_plan_speed_to_speed_up_soft_controller.md  Importing_FSA_version_5_model_2026-05-05_0859.md  Importing_FSA_version_5_model_specific_notes_2026-05-05_0935.md  Intro to research engineer agent importing and verifying FSA version 5.md  Julia_port_FSA_v5_model_plan_2026-05-06_1921.md  Overnight_summary_quality_speed_2026-05-06_0700.md  (+7 more)
(+309 files in other folders)
